--- a/linchengwu.html
+++ b/linchengwu.html
@@ -7,7 +7,7 @@
 </style></head>
 
 <body class="bt">
-<p><img src="file:///C|/Users/Administrator/Documents/未命名站点 2/logo.jpg" width="270" height="70" />
+<p><img src="http://www.gdut.edu.cn/images/logo-2.png" width="270" height="70" />
 </p>
 <p>&nbsp;</p>
 </body>
