--- a/主页广东工业大学.html
+++ b/主页广东工业大学.html
@@ -71,7 +71,7 @@ body {
 	top: 140px;
 	color: #900;
 	background-color: #900;
-	visibility: hidden;
+	visibility: visible;
 }
 </style>
 <script type="text/javascript">
@@ -87,7 +87,7 @@ function MM_showHideLayers() { //v9.0
 
 <body id="css3">
 <p align="right"><img src="http://www.gdut.edu.cn/images/logo-2.png" width="293" height="70" /></p>
-<p align="left" class="css2" onmouseover="MM_showHideLayers('apDiv3','','show')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 首页&nbsp;&nbsp;&nbsp;&nbsp;学校简介&nbsp;&nbsp;&nbsp;&nbsp;学校领导&nbsp;&nbsp;&nbsp;&nbsp;基本数据&nbsp;&nbsp;&nbsp;&nbsp;历史沿革&nbsp;&nbsp;&nbsp;&nbsp;部门主页&nbsp;&nbsp;&nbsp;&nbsp;校区分布</p> 
+<p align="left" class="css2" onmouseover="MM_showHideLayers('apDiv3','','show')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/主页广东工业大学.html" target="_parent">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校简介.html" target="_parent">学校简介</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校领导.html" target="_parent">学校领导</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/基本数据.html" target="_parent">基本数据</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/历史沿革.html" target="_parent">历史沿革</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/部门主页.html" target="_parent">部门主页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/%E5%A4%A7%E5%AD%A6%E5%9F%8E%E6%A0%A1%E5%8C%BA.html" target="_parent">校区分布</a></p> 
 <div style ="width:100%;height:100%;overflow:hidden;"><img src="http://www.gdut.edu.cn/images/bak/banner-by-10.jpg"></div>
 <div id="apDiv2"><div id=lcw1>
   <blockquote>
@@ -99,6 +99,5 @@ function MM_showHideLayers() { //v9.0
   <ul><li>广东工业大学60周年校庆公告</li><li></li></ul>
 </div>
 <p>&nbsp;</p>
-<div id="apDiv3"></div>
 </body>
 </html>
