--- a/历史沿革.html
+++ b/历史沿革.html
@@ -116,7 +116,7 @@
 </style></head>
 
 <body><p align="right"><img src="http://www.gdut.edu.cn/images/logo-2.png" width="293" height="70" /></p>
-<span class="css2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 首页&nbsp;&nbsp;&nbsp;&nbsp;学校简介&nbsp;&nbsp;&nbsp;&nbsp;学校领导&nbsp;&nbsp;&nbsp;&nbsp;基本数据&nbsp;&nbsp;&nbsp;&nbsp;历史沿革&nbsp;&nbsp;&nbsp;&nbsp;部门主页&nbsp;&nbsp;&nbsp;&nbsp;校区分布</span>
+<span class="css2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://linchengwu.github.io/monster/主页广东工业大学.html" target="_parent">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校简介.html" target="_parent">学校简介</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校领导.html" target="_parent">学校领导</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/基本数据.html" target="_parent">基本数据</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/历史沿革.html" target="_parent">历史沿革</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/部门主页.html" target="_parent">部门主页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/大学城校区.html" target="_parent">校区分布</a></span>
 <div style ="width:100%;height:100%;overflow:hidden;">
 <div align="center">
 
@@ -124,27 +124,26 @@
 </div>
 </div>
 <div id="apDiv6"><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 0px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;"><div style="text-align:center; 
-line-height: 50px;">学校简介 </div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/学校简介.html" target="_parent">学校简介</a></div>
 </div>
 <img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" />
 <div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 3; left: 0px; top: 70px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">学校领导</div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/学校领导.html" target="_parent">学校领导</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 280px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">部门主页 </div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/部门主页.html" target="_parent">部门主页</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 210px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
  <div style="text-align:center; 
-line-height: 50px;">历史沿革 </div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/历史沿革.html" target="_parent">历史沿革</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 140px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">基本数据</div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/基本数据.html" target="_parent">基本数据</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" longdesc="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" />
 <div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 350px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
 line-height: 50px;">
-    校区分布 
-  </div>
+    <a href="https://linchengwu.github.io/monster/大学城校区.html" target="_parent">校区分布</a> </div>
 </div></div>
 <div id="apDiv1">历史沿革</div>
 <div id="apDiv10">
