--- a/龙洞校区.html
+++ b/龙洞校区.html
@@ -118,7 +118,7 @@
 </style></head>
 
 <body><p align="right"><img src="http://www.gdut.edu.cn/images/logo-2.png" width="293" height="70" /></p>
-<span class="css2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 首页&nbsp;&nbsp;&nbsp;&nbsp;学校简介&nbsp;&nbsp;&nbsp;&nbsp;学校领导&nbsp;&nbsp;&nbsp;&nbsp;基本数据&nbsp;&nbsp;&nbsp;&nbsp;历史沿革&nbsp;&nbsp;&nbsp;&nbsp;部门主页&nbsp;&nbsp;&nbsp;&nbsp;校区分布</span>
+<span class="css2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <a href="https://linchengwu.github.io/monster/主页广东工业大学.html" target="_parent">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校简介.html" target="_parent">学校简介</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校领导.html" target="_parent">学校领导</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/基本数据.html" target="_parent">基本数据</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/历史沿革.html" target="_parent">历史沿革</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/部门主页.html" target="_parent">部门主页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/大学城校区.html" target="_parent">校区分布</a></span>
 <div style ="width:100%;height:100%;overflow:hidden;">
 <div align="center">
 
@@ -127,21 +127,21 @@
 </div>
 <div id="apDiv6"><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 0px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">大学城校区 </div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/大学城校区.html" target="_parent">大学城校区</a></div>
 </div>
 <img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" />
 <div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 3; left: 0px; top: 70px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">东风路校区</div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/%E4%B8%9C%E9%A3%8E%E8%B7%AF%E6%A0%A1%E5%8C%BA.html" target="_parent">东风路校区</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 280px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">沙河校区</div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/%E6%B2%99%E6%B2%B3%E6%A0%A1%E5%8C%BA.html" target="_parent">沙河校区</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 210px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
  <div style="text-align:center; 
-line-height: 50px;">番禺校区	</div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/%E7%95%AA%E7%A6%BA%E6%A0%A1%E5%8C%BA.html" target="_parent">番禺校区</a></div>
 </div><img src="https://linchengwu.github.io/monster/%E4%B8%8B%E8%BD%BD.jpg" width="165" height="70" /><div class="css123" style="position: absolute; width: 165px; height: 70px; z-indent: 2; left: 0px; top: 140px; font-size: larger; font-family: 'Palatino Linotype', 'Book Antiqua', Palatino, serif;">
   <div style="text-align:center; 
-line-height: 50px;">龙洞校区</div>
+line-height: 50px;"><a href="https://linchengwu.github.io/monster/%E9%BE%99%E6%B4%9E%E6%A0%A1%E5%8C%BA.html" target="_parent">龙洞校区</a></div>
 </div>
 </div>
 <div id="apDiv1">龙洞校区</div>
