--- a/主页广东工业大学.html
+++ b/主页广东工业大学.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>无标题文档</title>
+<title>广东工业大学</title>
 <style type="text/css">
 body {
 	background-image: url(../Downloads/timg.jpg);
@@ -73,6 +73,14 @@ body {
 	background-color: #900;
 	visibility: visible;
 }
+#apDiv4 {
+	position: absolute;
+	width: 200px;
+	height: 115px;
+	z-index: 1;
+	left: 18px;
+	top: 542px;
+}
 </style>
 <script type="text/javascript">
 function MM_showHideLayers() { //v9.0
@@ -89,15 +97,7 @@ function MM_showHideLayers() { //v9.0
 <p align="right"><img src="http://www.gdut.edu.cn/images/logo-2.png" width="293" height="70" /></p>
 <p align="left" class="css2" onmouseover="MM_showHideLayers('apDiv3','','show')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/主页广东工业大学.html" target="_parent">首页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校简介.html" target="_parent">学校简介</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/学校领导.html" target="_parent">学校领导</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/基本数据.html" target="_parent">基本数据</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/历史沿革.html" target="_parent">历史沿革</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/部门主页.html" target="_parent">部门主页</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://linchengwu.github.io/monster/%E5%A4%A7%E5%AD%A6%E5%9F%8E%E6%A0%A1%E5%8C%BA.html" target="_parent">校区分布</a></p> 
 <div style ="width:100%;height:100%;overflow:hidden;"><img src="http://www.gdut.edu.cn/images/bak/banner-by-10.jpg"></div>
-<div id="apDiv2"><div id=lcw1>
-  <blockquote>
-    <blockquote>
-      <p>学校新闻</p>
-    </blockquote>
-  </blockquote>
-</div>
-  <ul><li>广东工业大学60周年校庆公告</li><li></li></ul>
-</div>
 <p>&nbsp;</p>
+<div id="apDiv4"><img src="https://timgsa.baidu.com/timg?image&amp;quality=80&amp;size=b9999_10000&amp;sec=1527687095&amp;di=4daa4e1a230889f182ec23bd65850392&amp;imgtype=jpg&amp;er=1&amp;src=http%3A%2F%2Fsz.yichedu.com%2Fd%2Ffile%2Fp%2F2014-06-06%2F9752376a3e4a4d884db617bab673e9c6.jpg" width="1200" height="403" /></div>
 </body>
 </html>
